# pose-tensorflow

./: README.md  __init__.py
dataset/: __init__.py
demo/: CMakeLists.txt  __init__.py  singleperson.py  singleperson_yarp.py  skeleton2D.py  skeleton2D_fake.py
models/: __init__.py
nnet/: __init__.py  predict.py
util/: __init__.py  visualize.py
